tests/paczka1/small_fuzzy/11369896.err
Error in line 1: jeVELHRQcIb S689 97,8
Error in line 8: 4Ubtvq S540 85,4
